# Blurly

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: package-macos-dmg.sh  package-macos-standalone.sh  sign-dev.sh  validate-macos-release.sh  validate-macos-standalone.sh  with-env.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_analyst.sql  003_key_signing.sql  004_price_updated_at.sql  005_fx_settings.sql  006_fx_refreshed_at.sql  007_price_refresh_metadata.sql  008_price_refresh_runs.sql  009_analyst_persona.sql  010_strategy.sql  011_analyst_threads.sql  012_strategy_cash_reservations.sql  013_analyst_message_model.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/ai/: mod.rs  openai.rs  prompts.rs
src-tauri/src/commands/: ai_keys.rs  ai_settings.rs  analysis.rs  analyst_chat.rs  db.rs  fx.rs  holdings.rs  key_store.rs  mod.rs  portfolio.rs  settings.rs  signing.rs  snapshots.rs  strategy.rs  strategy_reservations.rs  twelve_data.rs  watchlist.rs
src/components/: analyst-memo.tsx  app-shell.tsx  asset-breakdown.tsx  empty-state.tsx  holding-form.tsx  holdings-table.tsx  sidebar.tsx  stat-card.tsx  top-holdings-table.tsx  twelve-data-refresh-dialog.tsx  update-prices-dialog.tsx  windows-not-ready-banner.tsx
src/lib/: analysis.test.ts  analysis.ts  calculations.test.ts  (+6 more)
(+34 files in other folders)
